package com.cleanup.todoc.database.dao;

import androidx.lifecycle.LiveData;
import androidx.room.Dao;
import androidx.room.Insert;
import androidx.room.OnConflictStrategy;
import androidx.room.Query;

import com.cleanup.todoc.model.Project;

@Dao
public interface ProjectDao {
	@Insert(onConflict = OnConflictStrategy.REPLACE)
	void createProject(Project project);

	@Query("SELECT * FROM Project WHERE id = :projectId")
	LiveData<Project> getProject(long projectId);
}
